# py_package

./: .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  build_proto.py  create_pypi_index.py  custom_install.py  depr_setup_py  index.html  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt  setup.py  strique-protopy.html  test_script.py
.github/workflows/: claude.yml  custom.yml  dep.yml  index.yml  main.yml  new.yml  publish.yml  release.yml
additional_scripts/: build_proto.py  custom_install.py  pyproject.toml  setup copy.py  setup.py  test_script.py
py_strique/strique_pyproto/: __init__.py
src/protos/constants/countries/: countries.binary_pb  countries.proto  countries.textproto  country.proto  country_short_code.proto
src/protos/constants/currencies/: currency.proto
src/protos/constants/datetime/: day_of_week.proto  hour.proto
src/protos/constants/gender/: gender.proto
src/protos/constants/ui/: render_type.proto  sorting_direction.proto
src/protos/db/amazon_ads/: amazon_ads.proto
src/protos/db/amazon_seller/: order.proto  product.proto
src/protos/db/google_ads/: ad_group_ad.proto  advertising_channel_type.proto  asset_group_product_group_view.proto  campaign.proto  default_stats.proto  google_ads_status.proto  top_performing_keywords.proto  video_views.proto
src/protos/db/google_analytics/: age_bracket.proto  age_group_gender_analysis.proto  best_performing_day_of_the_week.proto  funnel_analytics.proto  new_vs_returning_users.proto  sessions_by_device_category.proto  speed_analysis.proto  time_wise_bifurcation.proto  top_browsers.proto  top_landing_pages_by_sessions.proto  top_performing_cities.proto  top_performing_regions.proto  top_selling_products_category.proto  (+1 more)
src/protos/demo/: demo.proto
src/protos/hello/: hello.proto
src/protos/report/: report_request.proto  report_response.proto
src/protos/view_config/: view_config_request.proto  view_config_response.proto
src/protos/widget/: widget.proto  widget_types.proto
src/resources/tools/: cleanup-npm.sh  gen-binary-pb.sh  gen-js-ts.sh  version.sh
src/strique_protopy/: pyproject.toml
strique-protopy/: index.html
(+49 files in other folders)
