[build-system]
requires = ["setuptools>=61.0", "wheel", "grpcio", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[project]
name = "strique-proto-schema"
version = "13.8.3"
description = "API contracts and Data Transfer Objects (DTO) in the form of Protocol Buffers for Strique binaries."
requires-python = ">=3.7"
dependencies = [
    "requests",
    "grpcio",
    "grpcio-tools",
]

[tool.setuptools]
packages = ["strique_proto_schema", "custom_build"]

[tool.setuptools.package-data]
strique_proto_schema = ["**/*.py", "**/*.binary_pb"]

[tool.setuptools.cmdclass]
build_py = "custom_build.CustomBuildCommand"
egg_info = "custom_build.CustomEggInfoCommand"
install = "custom_build.CustomInstallCommand"