[build-system]
requires = ["setuptools>=61.0", "wheel", "grpcio", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[project]
name = "strique-proto-schema"
version = "13.8.6"
description = "API contracts and Data Transfer Objects (DTO) in the form of Protocol Buffers for Strique binaries."
requires-python = ">=3.7"
dependencies = [
    "requests",
    "grpcio",
    "grpcio-tools",
]

[tool.setuptools]
packages = ["strique_proto_schema"]

[tool.setuptools.package-data]
strique_proto_schema = ["**/*.py", "**/*.binary_pb"]

[tool.setuptools.cmdclass]
build_py = "__init__.CustomBuildCommand"
egg_info = "__init__.CustomEggInfoCommand"
install = "__init__.CustomInstallCommand"